Kurdish now aligns to the right of the textbox, although I noticed an issue with the order of words; maybe lines should be reversed?

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -67,3 +67,6 @@ button {
   margin-left: 100px;
 }
 
+.rtl-textbox {
+    text-align: right;
+}
